<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host_fragment"
    app:startDestination="@id/nav_antropometrico">

    <fragment
        android:id="@+id/nav_antropometrico"
        android:name="br.edu.utfpr.geladeira_v5.ui.antropometricos.AntropometricoFragment"
        android:label="@string/title_antropometrico"
        tools:layout="@layout/fragment_antropometrico" />

    <fragment
        android:id="@+id/nav_prescricao"
        android:name="br.edu.utfpr.geladeira_v5.ui.prescricao.PrescricaoFragment"
        android:label="@string/title_prescricao"
        tools:layout="@layout/fragment_prescricao" />

    <fragment
        android:id="@+id/nav_laudo"
        android:name="br.edu.utfpr.geladeira_v5.ui.laudo.LaudoFragment"
        android:label="@string/title_laudo"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_nutricional"
        android:name="br.edu.utfpr.geladeira_v5.ui.nutricional.NutricionalFragment"
        android:label="@string/title_nutricional"
        tools:layout="@layout/activity_fullscreen" />

    <fragment
        android:id="@+id/nav_receitas"
        android:name="br.edu.utfpr.geladeira_v5.ui.receitas.ReceitasFragment"
        android:label="@string/title_receitas"
        tools:layout="@layout/fragment_receitas" />
</navigation>