<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".LoginActivity">

    <TableRow android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@mipmap/ic_launcher" />

    </TableRow>


    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:enabled="true"
        android:text="@string/action_sign_in" />

    <Button
        android:id="@+id/esqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci" />

    <Button
        android:id="@+id/semsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semsenha" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_github_search_results_json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acesso ao sistema"
                android:textSize="18sp" />
        </ScrollView>

        <!--COMPLETED (4) Add a TextView to display an error message-->
        <!--COMPLETED (5) Set the text size to 22sp-->
        <!--COMPLETED (6) Give the TextView an id of @+id/tv_error_message_display-->
        <!--COMPLETED (7) Set the layout_height and layout_width to wrap_content-->
        <!--COMPLETED (8) Add 16dp of padding to the error display -->
        <!--COMPLETED (9) Use your strings.xml error message to set the text for the error message-->
        <!--COMPLETED (10) Set the visibility of the view to invisible-->
        <!--COMPLETED (11) Make this TextView a child of the FrameLayout the you added above-->
        <TextView
            android:id="@+id/tv_error_message_display"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_url_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="22sp" />

        <!--COMPLETED (18) Add a ProgressBar to indicate loading to your users-->
        <!--COMPLETED (19) Give the ProgressBar an id of @+id/pb_loading_indicator-->
        <!--COMPLETED (20) Set the layout_height and layout_width to 42dp-->
        <!--COMPLETED (21) Set the layout_gravity to center-->
        <!--COMPLETED (22) Set the visibility of the ProgressBar to invisible-->
        <!--COMPLETED (23) Make this ProgressBar a child of the FrameLayout that you added above-->
        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>

</TableLayout>